--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
@@ -71,4 +71,10 @@
           v{{ projectVersion }}
     </div>
 
+    {% block copyright %}
+    <div class="copyright c-footer__link float--left u-pl-1_5">
+        © 2022 Behörde für Stadtentwicklung und Wohnen Hamburg
+    </div>
+    {% endblock copyright %}
+
 </footer>
