--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
@@ -66,11 +66,11 @@
         {% endapply %}
     </nav>
 
-    <div class="c-footer__version float--right u-pt-0_25-palm"
+    {% block copyright %}{% endblock copyright %}
+
+    <div class=" version-number c-footer__version u-pt-0_25-palm float--right"
          aria-label="{{ 'system.version_info'|trans }}">
           v{{ projectVersion }}
     </div>
-
-    {% block copyright %}{% endblock copyright %}
 
 </footer>
