Feat(refs:T31920): Change year of copyright and use the existing padding css for version number
ADO 4198

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
@@ -68,7 +68,7 @@
 
     {% block copyright %}{% endblock copyright %}
 
-    <div class=" version-number c-footer__version u-pt-0_25-palm float--right"
+    <div class=" version-number c-footer__version u-pt-0_25-palm u-pr-0_5 float--right"
          aria-label="{{ 'system.version_info'|trans }}">
           v{{ projectVersion }}
     </div>
