fix(refs T30974): rework color tokens
new system/message color tokens are defined in a more granular way.
where possible, new tokens from demosplan-ui are used. they replace
the old system/msg color variables.

rename `color--highlight` with `color-brand-highlight`.

new bg color tokens for neutrals are used (bg-color-ui-light
and bg-color-ui-medium).

new tokens for deleted + inserted text are introduced.

notification components are tweaked to get the new colors.

scss file structure refactoring:
- _settings-color-palette.scss and _settings-color-assignment.scss moved together into _settings-color.scss
- tokens/color.scss removed, as everything lives inside color.scss now

adapt ewm overrides to new tokens + file structure.

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_base.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_base.dplan.scss
@@ -51,7 +51,7 @@ html.fixtinyfixed {
 
 body {
     min-height: 100%; // ensures complete display of absolutely positioned flyouts
-    background: $dp-bg-color;
+    background: $dp-color-background-default;
     letter-spacing: $base-letter-spacing;
     outline: none;
 }
