--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_badge.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_badge.scss
@@ -85,7 +85,7 @@
 }
 
 .o-badge--alert {
-    background-color: $dp-color-system-error;
+    background-color: $dp-color-message-severe-fill;
     color: $dp-color-white;
 }
 
