--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings.dplan.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/_settings.dplan.scss
@@ -22,7 +22,7 @@ $inuit-base-font-size:          $base-font-size; // 16px.
 $inuit-base-line-height:        $base-line-height; // 24px. This is mapped to $inuit-base-spacing-unit
 
 $inuit-base-text-color:         $dp-color-text-default !default;
-$inuit-base-background-color:   $dp-bg-color !default;
+$inuit-base-background-color:   $dp-color-background-default !default;
 
 $inuit-enable-layout--flush:    true !default;
 $inuit-enable-layout--auto:     true !default;
