--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_color.scss
@@ -42,66 +42,76 @@
 
     // UI tokens
     &-ui {
-        &-dimmed-text {
-            color: $dp-token-color-ui-dimmed-text;
+        &-text-muted {
+            color: $dp-color-text-muted;
         }
 
-        &-message {
-            &-severe {
-                &-fill {
-                    color: $dp-color-message-severe-fill;
-                }
+        &-text-default {
+            color: $dp-color-text-default;
+        }
+
+        &-message-success {
+            &-text {
+                color: $dp-color-message-success-text;
+            }
+
+            &-fill {
+                color: $dp-color-message-success-fill;
             }
         }
 
-        &-neutral-text {
-            color: $dp-token-color-ui-neutral-text;
+        &-message-info {
+            &-text {
+                color: $dp-color-message-info-text;
+            }
+            &-fill {
+                color: $dp-color-message-info-fill;
+            }
         }
 
-        &-confirm {
-            color: $dp-token-color-ui-confirm;
+        &-message-warning-text {
+            color: $dp-color-message-warning-text;
         }
 
-        &-confirm-text {
-            color: $dp-token-color-ui-confirm-text;
-        }
-
-        &-info {
-            color: $dp-token-color-ui-info;
-        }
-
-        &-info-text {
-            color: $dp-token-color-ui-info-text;
-        }
-
-        &-warning {
-            color: $dp-token-color-ui-warning;
-        }
-
-        &-warning-text {
-            color: $dp-token-color-ui-warning-text;
-        }
-
-        &-error {
-            color: $dp-token-color-ui-error;
-        }
-
-        &-error-text {
-            color: $dp-token-color-ui-error-text;
+        &-message-severe {
+            &-text {
+                color: $dp-color-message-severe-text;
+            }
+            &-fill {
+                color: $dp-color-message-severe-fill;
+            }
         }
 
         &-interactive {
             color: $dp-color-interactive-default;
+        }
+
+        &-status-failed {
+            &-text {
+                color: $dp-color-status-failed-text;
+            }
+            &-fill {
+                color: $dp-color-status-failed-fill;
+            }
+        }
+
+        &-status-progress-text {
+            color: $dp-color-status-progress-text;
+        }
+
+        &-status-complete {
+            &-fill {
+                color: $dp-color-status-complete-fill;
+            }
+            &-text {
+                color: $dp-color-status-complete-text;
+            }
         }
     }
 
 
     // Utility classes mapping directly to color palette values
     // @deprecated use brand/ui color tokens instead
-
-    &--highlight {
-        color: $dp-color-brand-highlight;
-    }
 
     &--white {
         color: $dp-color-white !important;
@@ -123,26 +133,6 @@
 
     &--black {
         color: $dp-color-black;
-    }
-
-    &--system-confirm {
-        color: $dp-color-system-confirm;
-    }
-
-    &--system-info {
-        color: $dp-color-system-info;
-    }
-
-    &--system-warning {
-        color: $dp-color-system-warning;
-    }
-
-    &--system-error {
-        color: $dp-color-system-error;
-    }
-
-    &--system-error-dark {
-        color: $dp-color-system-error--dark;
     }
 }
 
@@ -172,57 +162,45 @@
 
     // UI tokens
     &-ui {
-        &-neutral-light {
-            background-color: $dp-token-color-ui-bg-neutral-light;
+        &-light {
+            background-color: $dp-color-background-light;
         }
 
-        &-neutral {
-            background-color: $dp-token-color-ui-neutral-bg;
+        &-medium {
+            background-color: $dp-color-background-medium;
         }
 
-        &-confirm {
-            background-color: $dp-token-color-ui-confirm-bg;
+        &-message-success {
+            background-color: $dp-color-message-success-bg;
         }
 
-        &-info {
-            background-color: $dp-token-color-ui-info-bg;
+        &-message-info {
+            background-color: $dp-color-message-info-bg;
         }
 
-        &-warning {
-            background-color: $dp-token-color-ui-warning-bg;
+        &-message-warning {
+            background-color: $dp-color-message-warning-bg;
         }
 
-        &-error {
-            background-color: $dp-token-color-ui-error-bg;
+        &-message-severe {
+            background-color: $dp-color-message-severe-bg;
+        }
+
+        &-selection {
+            background-color: $dp-color-selection-bg;
+        }
+
+        &-text-inserted-muted {
+            background-color: $dp-color-text-inserted-bg-muted;
+        }
+
+        &-text-deleted-muted {
+            background-color: $dp-color-text-deleted-bg-muted;
         }
     }
 
     // Utility classes mapping directly to color palette values
     // @deprecated use brand/ui color tokens instead
-
-    &--system-confirm-light {
-        background-color: $dp-color-system-confirm--light;
-    }
-
-    &--system-info-light-1 {
-        background-color: $dp-color-system-info--light-1;
-    }
-
-    &--system-info-light-2 {
-        background-color: $dp-color-system-info--light-2;
-    }
-
-    &--system-warning-light {
-        background-color: $dp-color-system-warning--light;
-    }
-
-    &--system-warning-light-1 {
-        background-color: $dp-color-system-warning--light-1;
-    }
-
-    &--system-error-light {
-        background-color: $dp-color-system-error--light;
-    }
 
     &--grey {
         background-color: $dp-color-neutral-base;
