chore: WIP Update VUE3
WIP WIP WIP

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/base.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/base.html.twig
@@ -154,25 +154,25 @@
                             data-toggle-sidebar-menu-container
                             class="o-page__sidebar layout__item is-expanded u-mb"
                             role="complementary">
-                            <div
-                                class="o-sticky"
-                                data-sticky="lap-up"
-                                data-sticky-context="mainContent">
-                                <button
-                                    data-toggle-sidebar-menu-trigger
-                                    type="button"
-                                    class="o-link--default btn--blank whitespace--nowrap u-mv-0_25">
-                                    <i
-                                        aria-hidden="true"
-                                        class="fa fa-chevron-right"></i>
-                                    {{ 'menu'|trans }}
-                                </button>
-                                <div
-                                    id="sideMenu"
-                                    class="border--top">
-                                    {% include '@DemosPlanCore/DemosPlanCore/includes/base_aside.html.twig' %}
-                                </div>
-                            </div>
+{#                            <div#}
+{#                                class="o-sticky"#}
+{#                                data-sticky="lap-up"#}
+{#                                data-sticky-context="mainContent">#}
+{#                                <button#}
+{#                                    data-toggle-sidebar-menu-trigger#}
+{#                                    type="button"#}
+{#                                    class="o-link--default btn--blank whitespace--nowrap u-mv-0_25">#}
+{#                                    <i#}
+{#                                        aria-hidden="true"#}
+{#                                        class="fa fa-chevron-right"></i>#}
+{#                                    {{ 'menu'|trans }}#}
+{#                                </button>#}
+{#                                <div#}
+{#                                    id="sideMenu"#}
+{#                                    class="border--top">#}
+{#                                    {% include '@DemosPlanCore/DemosPlanCore/includes/base_aside.html.twig' %}#}
+{#                                </div>#}
+{#                            </div>#}
                         </aside>
                     {% endblock base_aside %}
 
