--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/floodControl/honeypotFields.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/floodControl/honeypotFields.html.twig
@@ -1,2 +1,2 @@
-<input type="text" name="url" size="20" data-enhance-url-field>
+<input type="text" name="url" data-enhance-url-field>
 <input type="hidden" name="r_loadtime" value="{{ "now"|date("U") }}">
