Fix(refs:T32192): Remove added margin

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="c-footer o-page__padded u-ml-0_75 u-mr-0_75 {{ cssClassesFooter|default }} cf" role="contentinfo">
+<footer class="c-footer o-page__padded {{ cssClassesFooter|default }} cf" role="contentinfo">
 
     <nav class="display--inline-block"
          aria-label="{{ 'menu.footer'|trans }}"
