F_T32244 move StatementBundle twigs to core
- adjust twigs paths

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanStatement/list_statement_fragments_archive.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanStatement/list_statement_fragments_archive.html.twig
@@ -5,33 +5,28 @@
 {% block demosplanbundlecontent %}
     {%- apply spaceless %}
 
-
         <header class="layout--flush">
             {% block title_text %}
-                <h1 class="layout__item u-1-of-5">{{ "fragments"|trans }}</h1>
+                <h1 class="layout__item u-2-of-6">{{ "fragment.archive"|trans }}</h1>
             {% endblock title_text %}
 
             {# Pager #}
-            <form class="layout__item u-4-of-5 u-mt-0_5" action="{{ path("DemosPlan_statement_fragment_list_fragment_reviewer", {}) }}" method="post">
+            <form class="layout__item u-4-of-6 u-mt-0_5" action="{{ path("DemosPlan_statement_fragment_list_fragment_archived_reviewer", {}) }}" method="post">
                 {{ macros.pager( templateVars|default() ) }}
             </form>
 
             {# Bulk actions + Filters #}
-            <form action="{{ path("DemosPlan_statement_fragment_list_fragment_reviewer", {}) }}" method="post">
-                {% include '@DemosPlanStatement/DemosPlanStatement/includes/fragment_list_filter.html.twig' with { 'backpath' : 'DemosPlan_statement_fragment_list_fragment_reviewer' } %}
+            <form action="{{ path("DemosPlan_statement_fragment_list_fragment_archived_reviewer", {}) }}" method="post">
+                {% include '@DemosPlanCore/DemosPlanStatement/includes/fragment_list_filter.html.twig' with { 'backpath' : 'DemosPlan_statement_fragment_list_fragment_archived_reviewer' } %}
             </form>
         </header>
 
-        {# can do this, because here we are always logged in here #}
-        {% set user = currentUser %}
-        {% set username = user.firstName ~ ' ' ~ user.lastName %}
-
         <section class="u-mb">
             {% set advice_values = templateVars.adviceValues|default([]) %}
+
+            {# loop over found fragments #}
             <dp-fragment-list
-                :is-archive="false"
-                current-user-id="{{ user.ident }}"
-                current-user-name="{{ username }}"
+                :is-archive="true"
                 :fragments="JSON.parse('{{ templateVars.list|default([])|json_encode|e('js') }}')"
                 :advice-values="JSON.parse('{{ templateVars.adviceValues|default([])|json_encode|e('js') }}')"
             ></dp-fragment-list>
@@ -41,9 +36,6 @@
                 {{ macros.pager( templateVars|default() ) }}
             </form>
 
-            <div id="exportCheckboxDescription" hidden>
-                {{ "explanation.export.checkbox"|trans }}
-            </div>
         </section>
 
     {% endapply -%}
@@ -52,5 +44,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['statement-listStatementFragments.js']) }}
+    {{ webpackBundles(['statement-listStatementFragmentsArchive.js']) }}
 {% endblock javascripts %}
