chore(refs T32012): Use ref instead of $el
its recomended in vue3 an it looks like it has to be like that to work

--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/public_paragraph_document.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/public_paragraph_document.html.twig
@@ -44,8 +44,14 @@
     {% endblock page_header %}
 
     {# content #}
-    <dp-public-detail-no-map inline-template procedure-id="{{ procedure }}" user-id="{{ app.user.id|default }}">
-        <div id="scParagraph" class="{{ 'o-page__padded'|prefixClass }}">
+    <dp-public-detail-no-map
+        inline-template
+        procedure-id="{{ procedure }}"
+        user-id="{{ app.user.id|default }}">
+        <div
+            id="scParagraph"
+            class="{{ 'o-page__padded'|prefixClass }}"
+            ref="root">
 
             {% if templateVars.list.documentlistToc|default([])|length > 0 %}
 
