--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail.html.twig
@@ -108,7 +108,8 @@
             procedure-id="{{ procedure }}"
             inline-template>
     {% endif %}
-    <div>
+
+        <div ref="root">
 
         {# infolist - display meta info of procedure #}
         {% block infolist %}
